--- a/res/myres.qrc
+++ b/res/myres.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/Icon">
-        <file>appIcon.png</file>
+        <file>AndroidTools.svg</file>
         <file>Refresh.png</file>
     </qresource>
 </RCC>
